Temp fix of navbar collapse

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -31,6 +31,18 @@ body
   background-color: transparent
   color: #999999
 
+.navbar-collapse.collapse 
+  display: block!important
+
+.navbar-nav>li, .navbar-nav
+  float: left !important
+
+.navbar-nav.navbar-right:last-child
+  margin-right: -15px !important
+
+.navbar-right
+  float: right!important
+
 
 
 
